XWIKI-5939: Allow to edit the positions of gadgets on a dashboard with drag & drop Drag & drop decorations contributed by Stefan Orzu, applied with modifications. XWIKI-5941: Allow to remove a gadget from a dashboard * Added dashboard visual editor in edit inline mode, with drag & drop for gadgets positions and remove button Fixed the columns layout to use columns spacing on both sides of columns (instead of only the right side), and to handle empty columns
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/trunk@34685 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/resources/uicomponents/container/columns.css
+++ b/xwiki-platform-web/standard/src/main/webapp/resources/uicomponents/container/columns.css
@@ -4,9 +4,9 @@
 ## don't fill 100% because IE doesn't fit things properly in
 #set($columnsTotalWidth = 99.9)
 ## 1.5% padding right to all the columns except last one
-#set($columnRightPadding = 1.5)
+#set($columnPadding = 0.75)
 ## compute the percent of the screen width of a column
-#set($computedColumnWidth = (($columnsTotalWidth - $columnRightPadding * ($columnsNumber - 1)) / $columnsNumber))
+#set($computedColumnWidth = (($columnsTotalWidth - $columnPadding * 2 * ($columnsNumber - 1)) / $columnsNumber))
 
 ## FIXME: this style should not be here, it's style for the container overall, not for the columns layout. 
 ## For the moment it's here to minimize the number of requested csss, 
@@ -20,9 +20,23 @@
 .container-columns .column {
   float: left;
   width: ${computedColumnWidth}%;
-  padding-right: ${columnRightPadding}%;
+  padding-right: ${columnPadding}%;
+  padding-left: ${columnPadding}%;
 }
 
+/* Make sure that the columns take space when they're empty: if height is auto, and they are floated, 
+   they will collapse as if they didn't exist, which breaks the layout */
+.container-columns .column {
+  min-height: 10px;
+}
+/* And for IE6, which doesn't understand the min-height */
+* html .container-columns .column {
+  height: 10px;
+} 
+
+.container-columns .first-column {
+  padding-left: 0;
+}
 .container-columns .last-column {
   padding-right: 0;
 }
